# algoflow

./: .algokit.toml  .env.example  .gitignore  AlgoFlow_Presentation.pptx  CLAUDE.md  INFINOVA BLOCKCHAIN DOMAIN PROBLEM STATEMENTS.pages  PRESENTATION.md  README.md  SESSION-HANDOFF-DEMO.md  TALKING_POINTS.md  pyproject.toml  requirements.txt
docs/: 00-master-plan.md  01-prd.md  02-architecture.md  03-data-model.md  04-screen-map.md
docs/prd-sections/: functional-requirements.md  non-functional-requirements.md  user-journeys.md
docs/readiness/: consistency-audit.md  final-pre-execution-audit.md  fr-coverage-audit.md  quality-audit.md
docs/research/: ambiguity-resolutions.md  docs-sync-audit.md  final-consistency-audit.md  market-analysis.md  requirements-gaps.md  technical-analysis.md  user-value-audit.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
orchestrator/: enforcement-protocol.md  learning-log.md
scripts/: demo.py  deploy.py  fund_accounts.py  reset.py
smart_contracts/helpers/: build.py  constants.py
smart_contracts/payroll_stream/: PayrollStream.arc56.json  contract.py  deploy_config.py
sprints/: sprint-plan.md  sprint-status.yaml
sprints/stories/: STORY-0-001.md  STORY-0-002.md  STORY-1-001.md  STORY-1-002.md  STORY-1-003.md  STORY-1-004.md  STORY-1-005.md  STORY-2-001.md  STORY-2-002.md  STORY-2-003.md  STORY-2-004.md  STORY-2-005.md  (+10 more)
tests/: conftest.py  test_integration.py  test_payroll_stream.py
(+52 files in other folders)
