[project]
name = "algoflow"
version = "0.1.0"
description = "Real-time programmable payroll infrastructure on Algorand"
readme = "CLAUDE.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "algorand-python",
    "py-algorand-sdk>=2.6.0",
    "algokit-utils>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
